# grasp-synergy

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: grasp_synergy.launch  rqt_ez_pub-config.yaml
src/grasp_synergy/: grasp_synergy.py  synergy_node.py
src/grasp_synergy/test/: test_synergy.py
src/grasp_synergy/test/data/: allegro.bag
test/: grasp_synergy.test  grasp_synergy_test.py
