<?xml version="1.0"?>
<package>
  <name>grasp_synergy</name>
  <version>0.0.2</version>
  <description>Grasp Synergies (aka eigengrasps): compute, store, and command low-dimensional grasp representations.</description>

  <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rqt_ez_publisher</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
